--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,26 @@
     font-family: "Inter", sans-serif;
 }
 
+.box{
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);  
+    visibility: hidden;  
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s, transform 0.25s;
+}
+
+.show{
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s, transform 0.25s;
+}
+
